# savgol

./: CMakeLists.txt  LICENSE  README.md  _clang-format  main.cpp
include/: savgol.hpp
